test/typechecker.d/invalid/data1.surc.bad
def enum Boots = { Troot Fabs }

def enum CBools = { Zero One }

b: Boots = Zero
